--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Audiorganizer</title>
@@ -6,8 +7,8 @@
   </head>
   <body>
     <p>voila!</p>
-    <audio>
-      <source type="file/mp3" src="fichierx.mp3" />
+    <audio controls>
+      <source type="audio/mp3" src="" />
     </audio>
   </body>
 </html>
